# Echo-Assistant

./: .env.example  .gitignore  .prettierignore  BUILD_REPORT.md  LICENSE  README.md  RELEASE_NOTES.md  THIRD_PARTY_NOTICES.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
.codex/: hooks.json
.github/workflows/: ci.yml  firefox-release.yml  macos-release.yml  windows-release.yml
apps/desktop/: package.json  playwright.config.ts  vite.config.ts
apps/desktop/e2e/: global-setup.ts  main-flow.spec.ts
apps/desktop/src/: App.test.tsx  App.tsx  application.sidecar.test.ts  application.ts  model.ts  secure.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: database.rs  lib.rs  main.rs  sidecar.rs
apps/firefox-extension/: README.md  package.json  tsconfig.json
docs/: ARCHITECTURE.md  BACKUP_RECOVERY.md  BRAND_COMPATIBILITY.md  DATABASE_SCHEMA.md  FIREFOX_EXTENSION.md  FUTURE_INTEGRATIONS.md  IMPLEMENTATION_PLAN.md  MACOS_SETUP.md  MEMORY_DESIGN.md  OPENAI_CONFIGURATION.md  PACKAGING_RELEASE.md  SECURITY_THREAT_MODEL.md  SELF_IMPROVEMENT.md  SIDECAR.md  SKILLS_FORMAT.md  TESTING_STRATEGY.md  TOOL_PERMISSIONS.md  TROUBLESHOOTING.md  USER_PROFILE_DESIGN.md  WINDOWS_SETUP.md
scripts/: diagnostics.mjs  reset-database.mjs  verify-firefox-installed-release.ps1  verify-firefox-release.mjs  verify-release-version.mjs  verify-windows-release.ps1  write-release-evidence.mjs
(+12 files in other folders)
