[package]
name = "echo-desktop"
version = "0.1.0"
description = "Private local-first personal assistant"
authors = ["Echo contributors"]
edition = "2021"

[lib]
name = "echo_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
keyring = { version = "3", features = ["apple-native", "windows-native"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.22"
hmac = "0.12"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
sha2 = "0.10"
url = "2"
